--- a/src/main/webapp/WEB-INF/views/people/add.html
+++ b/src/main/webapp/WEB-INF/views/people/add.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Добавить читателя</title>
 </head>
 <body>
-
+<form th:method="POST" th:action="@{/people}" th:object="${person}">
+    <label for="fio">Введите ФИО: </label>
+    <input type="text" id="fio" th:field="*{selfIdentity}">
+    <div style="color: red" th:if="${#fields.hasErrors('selfIdentity')}" th:errors="*{selfIdentity}">
+        Ошибки на ФИО
+    </div>
+    <br>
+    <label for="year">Введите год рождения</label>
+    <input type="text" id="year" th:field="*{yearOfBirth}">
+    <div style="color: red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}">
+        Ошибки на году рождения
+    </div>
+    <br>
+    <button type="submit">Create!</button>
+</form>
 </body>
 </html>
