--- a/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/src/main/webapp/WEB-INF/views/people/edit.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Изменение читателя</title>
 </head>
 <body>
-
+<form th:method="PATCH" th:action="@{/people/{id}(id = ${person.getPersonId()})}" th:object="${person}">
+    <label for="fio">Введите ФИО: </label>
+    <input type="text" id="fio" th:field="*{selfIdentity}">
+    <div style="color:red" th:if="${#fields.hasErrors('selfIdentity')}" th:errors="*{selfIdentity}"></div>
+    <br>
+    <label for="year">Введите год рождения: </label>
+    <input type="text" id="year" th:field="*{yearOfBirth}">
+    <div style="color:red" th:if="${#fields.hasErrors('yearOfBirth')}" th:errors="*{yearOfBirth}"></div>
+    <br>
+    <button type="submit">Редактировать!</button>
+</form>
 </body>
 </html>
