--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Все читатели</title>
 </head>
 <body>
     <div th:each="person : ${people}">
-        <a th:text="${person.getSelfIdentity()} + ', ' + ${person.getYearOfBirth()}" th:href="@{/people/{id}(id = ${person.getId()})}">user</a>
+        <a th:text="${person.getSelfIdentity()} + ', ' + ${person.getYearOfBirth()}"
+           th:href="@{/people/{id}(id = ${person.getPersonId})}">user</a>
     </div>
     <br>
     <hr>
