--- a/src/main/webapp/WEB-INF/views/people/person.html
+++ b/src/main/webapp/WEB-INF/views/people/person.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Читатель</title>
 </head>
 <body>
+<p th:text="${person.getSelfIdentity()} + ', ' + ${person.getYearOfBirth()}"/>
 
+<div th:if="${books.size() != 0}">
+    <hr>
+    <b>Книги: </b>
+    <div th:each="book : ${books}">
+        <p th:text="${book.name} + ', ' + ${book.author} + ', ' + ${book.yearOfRelease}"/>
+    </div>
+</div>
+<div th:unless="${books.size() == 0}">
+    <p>Человек пока не взял ни одной книги</p>
+</div>
+
+<a th:href="@{/people/{id}/edit(id = ${person.getPersonId()})}">Редактировать</a>
+<form th:method="DELETE" th:action="@{/people/{id}(id = ${person.getPersonId()})}">
+    <input type="submit" value="Удалить">
+</form>
 </body>
 </html>
