--- a/src/main/webapp/WEB-INF/views/books/add.html
+++ b/src/main/webapp/WEB-INF/views/books/add.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Добавить книгу</title>
 </head>
 <body>
-
+<form th:method="POST" th:action="@{/books}" th:object="${book}">
+    <label for="name">Введите название книги: </label>
+    <input type="text" th:field="*{name}"/>
+    <div style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"/>
+    <br>
+    <label for="author">Введите автора:</label>
+    <input type="text" id="author" th:field="*{author}">
+    <div style="color: red" th:if="${#fields.hasErrors('author')}" th:errors="*{author}"/>
+    <br>
+    <label for="year">введите год: </label>
+    <input type="text" id="year" th:field="*{yearOfRelease}">
+    <div style="color: red" th:if="${#fields.hasErrors('yearOfRelease')}" th:errors="*{yearOfRelease}"/>
+    <br>
+    <button type="submit">Создать!</button>
+</form>
 </body>
 </html>
