--- a/src/main/webapp/WEB-INF/views/books/book.html
+++ b/src/main/webapp/WEB-INF/views/books/book.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Книга</title>
 </head>
 <body>
+
+<p th:text="${book.getName()} + ', ' + ${book.getAuthor()} + ', ' + ${book.getYearOfRelease()}"/>
+<div th:if="${book.personId == null}">
+    <form th:method="PATCH" th:action="@{/books/{id}/addReader(id = ${book.getBookId()})}">
+        <label for="people">Выберите человека: </label>
+        <select th:object="${person}" th:field="*{personId}" id="people">
+            <option th:each="person : ${people}" th:value="${person.getPersonId()}"
+                    th:text="${person.getSelfIdentity()}"/>
+        </select>
+        <input type="submit" value="Назначить книгу">
+    </form>
+</div>
+<div th:if="${book.personId != person.getPersonId}">
+    <p th:text="'Книга сейчас у: ' + ${person.selfIdentity}"/>
+    <br>
+    <form th:method="PATCH" th:action="@{/books/{id}/removeReader(id = ${book.getBookId()})}">
+        <input type="submit" value="Освободить книгу">
+    </form>
+</div>
+
+<hr>
+
+<a th:href="@{/books/{id}/edit(id = ${book.getBookId()})}">Редактировать</a>
+
+<form th:method="DELETE" th:action="@{/books/{id}(id = ${book.getBookId()})}">
+    <input type="submit" value="Удалить"/>
+</form>
 
 </body>
 </html>
