--- a/src/main/webapp/WEB-INF/views/books/index.html
+++ b/src/main/webapp/WEB-INF/views/books/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Все книги</title>
 </head>
 <body>
-
+    <div th:each="book : ${books}">
+        <a th:text="${book.getName()} + ', ' + ${book.getAuthor()} + ', ' + ${book.getYearOfRelease()}"
+           th:href="@{/books/{id}(id = ${book.getBookId()})}"/>
+    </div>
+    <br>
+    <hr>
+    <a href="/books/new">Добавить книгу</a>
 </body>
 </html>
