--- a/src/main/webapp/WEB-INF/views/people/person.html
+++ b/src/main/webapp/WEB-INF/views/people/person.html
@@ -18,12 +18,16 @@
     <div th:unless="${condition}">
         <p>Человек пока не взял ни одной книги</p>
     </div>
+    <hr>
 </div>
 
+<form th:method="GET" th:action="@{/people/{id}/edit(id = ${person.getPersonId()})}">\
+    <input type="submit" value="Редактировать">
+</form>
 
-<a th:href="@{/people/{id}/edit(id = ${person.getPersonId()})}">Редактировать</a>
 <form th:method="DELETE" th:action="@{/people/{id}(id = ${person.getPersonId()})}">
     <input type="submit" value="Удалить">
 </form>
+
 </body>
 </html>
