--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -11,6 +11,8 @@
     </div>
     <br>
     <hr>
+    <a href="/books">Полный список книг</a>
+    <br />
     <a href="/people/new">Добавить нового читателя</a>
 </body>
 </html>
