--- a/src/main/webapp/WEB-INF/views/people/person.html
+++ b/src/main/webapp/WEB-INF/views/people/person.html
@@ -21,7 +21,7 @@
     <hr>
 </div>
 
-<form th:method="GET" th:action="@{/people/{id}/edit(id = ${person.getPersonId()})}">\
+<form th:method="GET" th:action="@{/people/{id}/edit(id = ${person.getPersonId()})}">
     <input type="submit" value="Редактировать">
 </form>
 
